--- a/src/main/webapp/css/frame/common/customPopup.css
+++ b/src/main/webapp/css/frame/common/customPopup.css
@@ -17,24 +17,20 @@
 #customPopupContainer {
     position: absolute;
     width: 300px;
-    border-radius: 2px;
-    background-color: #eee;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
-    top: calc(50% - 100px);
+    background-color: #fff;
+    top: calc(50% - 150px);
     left: calc(50% - 150px);
-    padding-bottom: 15px;
+    border: 1px solid rgb(95, 0, 128);
 }
 
 #customPopupTitle {
-    background-color: #FB7D10;
-    border-top-radius: 2px;
-    color: #000;
-    font-weight: 500;
-    font-size: 13pt;
-    height: 30px;
-    padding-top: 8px;
-    text-align: center;
-    padding-left: 10px;
+    width: 100%;
+    line-height: 40px;
+    height: 40px;
+    font-weight: bold;
+    color: #FFFFFF;
+    font-size: 12pt;
+    background-color: rgb(95, 0, 128);
 }
 
 #customText {
@@ -45,7 +41,7 @@
     padding: 20px;
 }
 
-button.custom{
+button.custom {
     position: absolute;
     top: 15px;
     right: 10px;
@@ -92,4 +88,20 @@ button.custom{
 
 #confirmYes, #confirmNo {
     width: 130px;
+}
+
+.yesButton {
+    background: black;
+    border: 1px solid black;
+    color: white;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.noButton {
+    background: white;
+    border: 1px solid black;
+    color: black;
+    border-radius: 4px;
+    font-size: 16px;
 }
