--- a/src/main/webapp/css/project/main/userjoin.css
+++ b/src/main/webapp/css/project/main/userjoin.css
@@ -1,18 +1,3 @@
-@CHARSET "UTF-8";
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-ul, ol {
-    list-style: none;
-}
-
-a {
-    text-decoration: none
-}
-
 .topLine {
     position: relative;
     display: flex;
@@ -40,8 +25,7 @@ a {
 
 .joinLayout {
     min-width: 1050px;
-    margin-top: 65px;
-    margin-bottom: 7px;
+    margin-top: 40px;
     background-color: #fff;
 }
 
@@ -63,7 +47,8 @@ a {
 .inputArea {
     display: inline-flex;
     width: 100%;
-    padding: 10px 20px;
+    padding: 10px 0px 10px 20px;
+    margin-top: 4px;
 }
 
 .labelLayout {
@@ -112,8 +97,8 @@ a {
     height: 45px;
     border-radius: 3px;
     display: block;
+    position: relative;
     margin-right: 22px;
-    margin-top: 16px;
     padding: 0px 10px;
     text-align: center;
     overflow: hidden;
@@ -124,6 +109,7 @@ a {
     margin-left: 20px;
     cursor: pointer;
     font-size: 14px;
+    top: 16px;
 }
 
 .inputCheckButton:disabled {
