--- a/src/main/webapp/css/frame/common/markerPopup.css
+++ b/src/main/webapp/css/frame/common/markerPopup.css
@@ -17,10 +17,10 @@
     border-bottom: 1px solid #000000;
 
     /*chat gpt꺼*/
-    position: sticky;
-    top: 0;
-    background-color: white; /* 원하는 배경색으로 설정하세요 */
-    z-index: 100; /* 다른 요소들 위에 나타나도록 z-index 조절 */
+    /*position: sticky;*/
+    /*top: 0;*/
+    /*background-color: white; !* 원하는 배경색으로 설정하세요 *!*/
+    /*z-index: 100; !* 다른 요소들 위에 나타나도록 z-index 조절 *!*/
 }
 
 .infoTitle {
