--- a/src/main/webapp/css/project/main/groupmap.css
+++ b/src/main/webapp/css/project/main/groupmap.css
@@ -141,16 +141,16 @@
     height: 15px;
 }
 
-.ButtonList::before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 170px;
-    top: 2px;
-    width: 1px;
-    height: 15px;
-    background-color: #ccc;
-}
+/*.ButtonList::before {*/
+/*    content: '';*/
+/*    display: block;*/
+/*    position: absolute;*/
+/*    left: 170px;*/
+/*    top: 2px;*/
+/*    width: 1px;*/
+/*    height: 15px;*/
+/*    background-color: #ccc;*/
+/*}*/
 
 .ButtonList li:first-child {
     margin-left: 10px;
